Fix alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body {
     color: white;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 0 auto;
+    margin: 10px;
     margin-bottom: 1rem;
 }
 
